--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@tanstack/react-table": "^8.20.1",
+    "cmdk": "^1.1.1",
     "clsx": "^2.1.1",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-icons": "^5.3.0"
+
   },
   "devDependencies": {
     "@types/node": "22.10.2",
