--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-table": "^8.20.1",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-select": "^2.1.6",
-    "@tanstack/react-table": "^8.20.1",
-    "cmdk": "^1.1.1",
     "clsx": "^2.1.1",
-    "@vis.gl/react-google-maps": "^1.5.2",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-icons": "^5.3.0"
-
+    "react-icons": "^5.3.0",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
