--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-table": "^8.20.1",
     "@vis.gl/react-google-maps": "^1.5.2",
     "autoprefixer": "10.4.20",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -26,6 +27,7 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.0.0",
     "react-icons": "^5.3.0",
     "stripe": "^18.5.0"
