--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.468.0",
     "next": "latest",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
