--- a/package.json
+++ b/package.json
@@ -22,21 +22,28 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compromise": "^14.14.5",
     "lucide-react": "^0.468.0",
+    "natural": "^8.1.0",
     "next": "15.5.8",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.3",
+    "ngram": "^0.0.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.0.0",
     "react-icons": "^5.3.0",
+    "sentiment": "^5.0.2",
+    "stopword": "^3.1.5",
     "stripe": "^18.5.0"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
+    "@types/sentiment": "^5.0.4",
+    "@types/stopword": "^2.0.3",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
